@@ -1,3 +1,8 @@
+2007-01-26  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/tmpl/macros_misc.sgml: Document G_GNUC_INTERNAL
+	support for Sun Studio.
+
 2007-01-23  Matthias Clasen  <mclasen@redhat.com>
 
 	* gobject/tmpl/objects.sgml: Document 
